chore: change messages

--- a/packages/core/src/locales/en.json
+++ b/packages/core/src/locales/en.json
@@ -19,5 +19,5 @@
   "format": {
     "email": "{{label}} must be a valid email address."
   },
-  "union": "{{label}} must be one of the allowed values."
+  "union": "{{label}} is invalid."
 }
