--- a/packages/core/src/locales/en.json
+++ b/packages/core/src/locales/en.json
@@ -9,12 +9,17 @@
   "number": {
     "invalid": "{{label}} must be a number.",
     "minimum": "{{label}} must be at least {{minimum}}.",
-    "maximum": "{{label}} must be at most {{maximum}}."
+    "maximum": "{{label}} must be at most {{maximum}}.",
+    "exclusiveMinimum": "{{label}} must be greater than {{exclusiveMinimum}}.",
+    "exclusiveMaximum": "{{label}} must be less than {{exclusiveMaximum}}."
   },
   "array": {
     "invalid": "{{label}} must be an array.",
     "minItems": "{{label}} must have at least {{minItems}} items.",
     "maxItems": "{{label}} must have at most {{maxItems}} items."
+  },
+  "boolean": {
+    "invalid": "{{label}} must be a boolean."
   },
   "format": {
     "email": "{{label}} must be a valid email address."
